aws/infra.tf
# AWS infrastructure resources

resource "tls_private_key" "global_key" {
  algorithm = "RSA"
  rsa_bits  = 2048
}

resource "local_file" "ssh_private_key_pem" {
  filename          = "${path.module}/id_rsa"
  sensitive_content = tls_private_key.global_key.private_key_pem
  file_permission   = "0600"
}

resource "local_file" "ssh_public_key_openssh" {
  filename = "${path.module}/id_rsa.pub"
  content  = tls_private_key.global_key.public_key_openssh
}

# Temporary key pair used for SSH accesss
resource "aws_key_pair" "quickstart_key_pair" {
  key_name_prefix = "${var.prefix}-rancher-"
  public_key      = tls_private_key.global_key.public_key_openssh
}

# Security group to allow TLS to rancher-server
resource "aws_security_group" "rancher_sg_tls2server" {
  name        = "${var.prefix}-rancher-tls2server"
  description = "Rancher quickstart - allow tls to server"
  vpc_id = var.vpc_id


  ingress {
    from_port   = "443"
    to_port     = "443"
    protocol    = "TCP"
    cidr_blocks = ["88.98.213.234/32"]
  }

  egress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Creator = "rancher-quickstart"
  }
}

# Security group to allow all traffic
resource "aws_security_group" "rancher_sg_allowall" {
  name        = "${var.prefix}-rancher-allowall"
  description = "Rancher quickstart - allow all traffic"
  vpc_id = var.vpc_id


  ingress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    self        = true
  }

  ingress {
    from_port   = "-1"
    to_port     = "-1"
    protocol    = "icmp"
    self        = true
  }

  ingress {
    from_port   = "22"
    to_port     = "22"
    protocol    = "tcp"
    cidr_blocks = ["10.226.8.0/24", "10.226.10.0/24",]
  }

  ingress {
    from_port   = "443"
    to_port     = "443"
    protocol    = "tcp"
    cidr_blocks = ["10.226.8.0/24", "10.226.10.0/24",]
  }

  ingress {
    from_port   = "6443"
    to_port     = "6443"
    protocol    = "tcp"
    cidr_blocks = ["10.226.8.0/24", "10.226.10.0/24",]
  }

  egress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Creator = "rancher-quickstart"
  }
}

# AWS EC2 instance for creating a single node RKE cluster and installing the Rancher server
resource "aws_instance" "rancher_server" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  subnet_id     = var.subnet_id_1
  iam_instance_profile = aws_iam_instance_profile.rancher_profile.name
  depends_on = [
    aws_iam_role_policy.rancher_iam_policy,
    aws_security_group.rancher_sg_allowall,
  ]

  key_name        = aws_key_pair.quickstart_key_pair.key_name
  vpc_security_group_ids = [
    aws_security_group.rancher_sg_allowall.id,
    aws_security_group.rancher_sg_tls2server.id,
  ]

  user_data = templatefile(
    join("/", [path.module, "../cloud-common/files/userdata_rancher_server.template"]),
    {
      docker_version = var.docker_version
      username       = local.node_username
    }
  )

  root_block_device {
    volume_size = 16
    encrypted = true
    kms_key_id = var.ebs_kms_key_id

  }

  provisioner "remote-exec" {
    inline = [
      "echo 'Waiting for cloud-init to complete...'",
      "cloud-init status --wait > /dev/null",
      "echo 'Completed cloud-init!'",
    ]

    connection {
      type        = "ssh"
      host        = self.private_ip
      user        = local.node_username
      private_key = tls_private_key.global_key.private_key_pem
    }
  }

  tags = {
    Name    = "${var.prefix}-rancher-server"
    Creator = "rancher-quickstart"
  }
}

# Rancher resources
module "rancher_common" {
  source = "../rancher-common"

  node_public_ip         = aws_instance.rancher_server.public_ip
  node_internal_ip       = aws_instance.rancher_server.private_ip
  node_username          = local.node_username
  ssh_private_key_pem    = tls_private_key.global_key.private_key_pem
  rke_kubernetes_version = var.rke_kubernetes_version

  cert_manager_version = var.cert_manager_version
  rancher_version      = var.rancher_version

  rancher_server_dns = join(".", ["rancher", aws_instance.rancher_server.public_ip, "xip.io"])

  admin_password     = var.rancher_server_admin_password

  workload_kubernetes_version = var.workload_kubernetes_version
  workload_cluster_name       = "quickstart-aws-custom"
}

# # AWS EC2 instance for creating a single node workload cluster
# resource "aws_instance" "quickstart_node" {
#   ami           = data.aws_ami.ubuntu.id
#   subnet_id     = var.subnet_id_2
#   instance_type = var.instance_type
#   iam_instance_profile = aws_iam_instance_profile.rancher_profile.name
#   depends_on = [
#     aws_iam_role_policy.rancher_iam_policy,
#     aws_security_group.rancher_sg_allowall,
#   ]

#   key_name        = aws_key_pair.quickstart_key_pair.key_name
#   vpc_security_group_ids = [aws_security_group.rancher_sg_allowall.id]


#   user_data = templatefile(
#     join("/", [path.module, "files/userdata_quickstart_node.template"]),
#     {
#       docker_version   = var.docker_version
#       username         = local.node_username
#       register_command = module.rancher_common.custom_cluster_command
#     }
#   )

#   provisioner "remote-exec" {
#     inline = [
#       "echo 'Waiting for cloud-init to complete...'",
#       "cloud-init status --wait > /dev/null",
#       "echo 'Completed cloud-init!'",
#     ]

#     connection {
#       type        = "ssh"
#       host        = self.private_ip
#       user        = local.node_username
#       private_key = tls_private_key.global_key.private_key_pem
#     }
#   }

#   tags = {
#     Name    = "${var.prefix}-quickstart-node"
#     Creator = "rancher-quickstart"
#   }
# }
